Add UI for Post Ad, Delete Ad and Edit Ad.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,12 @@
         android:roundIcon="@drawable/twotone_sentiment_satisfied_white_48"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".presentation.UserProfileMenu"></activity>
+        <activity android:name=".presentation.ViewAdOfOtherUser"></activity>
+        <activity android:name=".presentation.EditAd" />
+        <activity android:name=".presentation.ViewAdOfCurrentUser" />
+        <activity android:name=".presentation.UserProfileMenu" />
         <activity android:name=".presentation.SignUp" />
+        <activity android:name=".presentation.PostAd" />
         <activity android:name=".presentation.Login" />
         <activity android:name=".presentation.MainActivity" />
         <activity android:name=".presentation.SplashScreen">
