--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
         android:roundIcon="@drawable/twotone_sentiment_satisfied_white_48"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".presentation.PostingAds.ViewAdOfOtherUser"></activity>
-        <activity android:name=".presentation.PostingAds.EditAd" />
-        <activity android:name=".presentation.PostingAds.ViewAdOfCurrentUser" />
-        <activity android:name=".presentation.UserProfile.UserProfileMenu" />
-        <activity android:name=".presentation.LoginFeature.SignUp" />
-        <activity android:name=".presentation.PostingAds.PostAd" />
-        <activity android:name=".presentation.LoginFeature.Login" />
+        <activity android:name=".presentation.PostingAdActivity.ViewAdOfOtherUser"></activity>
+        <activity android:name=".presentation.PostingAdActivity.EditAd" />
+        <activity android:name=".presentation.PostingAdActivity.ViewAdOfCurrentUser" />
+        <activity android:name=".presentation.UserProfileActivity.UserProfileMenu" />
+        <activity android:name=".presentation.LoginActivity.SignUp" />
+        <activity android:name=".presentation.PostingAdActivity.PostAd" />
+        <activity android:name=".presentation.LoginActivity.Login" />
         <activity android:name=".presentation.MainActivity" />
-        <activity android:name=".presentation.LoginFeature.ForgetPassword"/>
+        <activity android:name=".presentation.LoginActivity.ForgetPassword"/>
         <activity android:name=".presentation.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
