--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.simplisell">
+    package="com.simplisell">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:fullBackupContent="true"
+        android:icon="@drawable/twotone_sentiment_satisfied_white_48"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/twotone_sentiment_satisfied_white_48"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".presentation.PostingAdActivity.ViewAdOfOtherUser"></activity>
+        <activity android:name=".presentation.PostingAdActivity.EditAd" />
+        <activity android:name=".presentation.PostingAdActivity.ViewAdOfCurrentUser" />
+        <activity android:name=".presentation.UserProfileActivity.UserProfileMenu" />
+        <activity android:name=".presentation.LoginActivity.SignUp" />
+        <activity android:name=".presentation.PostingAdActivity.PostAd" />
+        <activity android:name=".presentation.LoginActivity.Login" />
+        <activity android:name=".presentation.MainActivity" />
+        <activity android:name=".presentation.LoginActivity.ForgetPassword"/>
+        <activity android:name=".presentation.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -18,6 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
