Add UI for profile pic and edit contact information.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.simplisell">
 
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-feature android:name="android.hardware.camera"></uses-feature>
+
+
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -10,7 +15,11 @@
         android:roundIcon="@drawable/twotone_sentiment_satisfied_white_48"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".presentation.UserProfileActivity.UsersOwnAds"></activity>
+
+        <activity android:name=".presentation.UserProfileActivity.ProfileInformation">
+
+        </activity>
+        <activity android:name=".presentation.UserProfileActivity.UsersOwnAds" />
         <activity android:name=".presentation.PostingAdActivity.ViewAdOfOtherUser" />
         <activity android:name=".presentation.PostingAdActivity.EditAd" />
         <activity android:name=".presentation.PostingAdActivity.ViewAdOfCurrentUser" />
@@ -32,6 +41,10 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
     </application>
+
+
 
 </manifest>
