--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".presentation.PostingAdActivity.ViewAdOfOtherUser"></activity>
-        <activity android:name=".presentation.PostingAdActivity.EditAd" />
-        <activity android:name=".presentation.PostingAdActivity.ViewAdOfCurrentUser" />
-        <activity android:name=".presentation.UserProfileActivity.UserProfileMenu" />
-        <activity android:name=".presentation.LoginActivity.SignUp" />
-        <activity android:name=".presentation.PostingAdActivity.PostAd" />
-        <activity android:name=".presentation.LoginActivity.Login" />
+        <activity android:name=".presentation.postingadactivity.ViewAdOfOtherUser"></activity>
+        <activity android:name=".presentation.postingadactivity.EditAd" />
+        <activity android:name=".presentation.postingadactivity.ViewAdOfCurrentUser" />
+        <activity android:name=".presentation.userprofileactivity.UserProfileMenu" />
+        <activity android:name=".presentation.loginactivity.SignUp" />
+        <activity android:name=".presentation.postingadactivity.PostAd" />
+        <activity android:name=".presentation.loginactivity.Login" />
         <activity android:name=".presentation.MainActivity" />
-        <activity android:name=".presentation.LoginActivity.ForgetPassword"/>
+        <activity android:name=".presentation.loginactivity.ForgetPassword"/>
         <activity android:name=".presentation.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
