--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,34 +3,38 @@
     package="com.simplisell">
 
     <application
-        android:allowBackup="true"
-        android:fullBackupContent="true"
-        android:icon="@drawable/logo"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".presentation.postingadactivity.ViewAdOfOtherUser" />
-        <activity android:name=".presentation.postingadactivity.EditAd" />
-        <activity android:name=".presentation.postingadactivity.ViewAdOfCurrentUser" />
-        <activity android:name=".presentation.userprofileactivity.UserProfileMenu" />
-        <activity android:name=".presentation.loginactivity.SignUp" />
-        <activity android:name=".presentation.postingadactivity.PostAd" />
-        <activity android:name=".presentation.loginactivity.Login" />
-        <activity android:name=".presentation.MainActivity" />
-        <activity android:name=".presentation.loginactivity.ForgetPassword"/>
+            android:allowBackup="true"
+            android:fullBackupContent="true"
+            android:icon="@drawable/logo"
+            android:label="@string/app_name"
+            android:roundIcon="@drawable/logo"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".presentation.AdminHomeScreen">
+        </activity>
+        <activity android:name=".adminHomeScreen">
+        </activity>
+        <activity android:name=".presentation.PostingAdActivity.ViewAdOfOtherUser"/>
+        <activity android:name=".presentation.PostingAdActivity.EditAd"/>
+        <activity android:name=".presentation.PostingAdActivity.ViewAdOfCurrentUser"/>
+        <activity android:name=".presentation.UserProfileActivity.UserProfileMenu"/>
+        <activity android:name=".presentation.LoginActivity.SignUp"/>
+        <activity android:name=".presentation.PostingAdActivity.PostAd"/>
+        <activity android:name=".presentation.LoginActivity.Login"/>
+        <activity android:name=".presentation.MainActivity"/>
+        <activity android:name=".presentation.LoginActivity.ForgetPassword"/>
         <activity android:name=".presentation.SplashScreen">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+                android:name="preloaded_fonts"
+                android:resource="@array/preloaded_fonts"/>
     </application>
 
 </manifest>
