--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.0-M1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.0-M1'
+    implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
 }
 
