--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".presentation.LoginActivity.Login" />
         <activity android:name=".presentation.MainActivity" />
         <activity android:name=".presentation.LoginActivity.ForgetPassword" />
+        <activity android:name=".presentation.UserAdminActivity.ReportedAds" />
+        <activity android:name=".presentation.UserAdminActivity.ReportedUsers" />
         <activity android:name=".presentation.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
