--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
@@ -28,5 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.0-M1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.0-M1'
+
+    // HSQLDB
+    implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'    //database driver.
 }
