Fix crash when signing up

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:fullBackupContent="true"
         android:icon="@drawable/twotone_sentiment_satisfied_white_48"
         android:label="@string/app_name"
