--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         <activity android:name=".presentation.loginactivity.Login"/>
         <activity android:name=".presentation.MainActivity"/>
         <activity android:name=".presentation.loginactivity.ForgetPassword"/>
-        <activity android:name=".presentation.UserAdminActivity.ReportedAds" />
-        <activity android:name=".presentation.UserAdminActivity.ReportedUsers" />
+        <activity android:name=".presentation.useradminactivity.ReportedAds" />
+        <activity android:name=".presentation.useradminactivity.ReportedUsers" />
         <activity android:name=".presentation.Messages" />
         <activity android:name=".presentation.SplashScreen">
             <intent-filter>
@@ -36,7 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.UserAdminActivity.AdminHomeScreen">
+        <activity android:name=".presentation.useradminactivity.AdminHomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.AdminHomeScreen"/>
 
