Update the package names to be all lowercase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <activity android:name=".presentation.UserProfileActivity.ProfileInformation">
+        <activity android:name=".presentation.userprofileactivity.ProfileInformation">
         </activity>
-        <activity android:name=".presentation.UserProfileActivity.UsersOwnAds" />
-        <activity android:name=".presentation.PostingAdActivity.ViewAdOfOtherUser" />
-        <activity android:name=".presentation.PostingAdActivity.EditAd" />
-        <activity android:name=".presentation.PostingAdActivity.ViewAdOfCurrentUser" />
-        <activity android:name=".presentation.UserProfileActivity.UserProfileMenu" />
-        <activity android:name=".presentation.LoginActivity.SignUp" />
-        <activity android:name=".presentation.PostingAdActivity.PostAd" />
-        <activity android:name=".presentation.LoginActivity.Login" />
+        <activity android:name=".presentation.userprofileactivity.UsersOwnAds" />
+        <activity android:name=".presentation.postingadactivity.ViewAdOfOtherUser" />
+        <activity android:name=".presentation.postingadactivity.EditAd" />
+        <activity android:name=".presentation.postingadactivity.ViewAdOfCurrentUser" />
+        <activity android:name=".presentation.userprofileactivity.UserProfileMenu" />
+        <activity android:name=".presentation.loginactivity.SignUp" />
+        <activity android:name=".presentation.postingadactivity.PostAd" />
+        <activity android:name=".presentation.loginactivity.Login" />
         <activity android:name=".presentation.MainActivity" />
-        <activity android:name=".presentation.LoginActivity.ForgetPassword" />
-        <activity android:name=".presentation.UserAdminActivity.ReportedAds" />
-        <activity android:name=".presentation.UserAdminActivity.ReportedUsers" />
+        <activity android:name=".presentation.loginactivity.ForgetPassword" />
+        <activity android:name=".presentation.useradminactivity.ReportedAds" />
+        <activity android:name=".presentation.useradminactivity.ReportedUsers" />
         <activity android:name=".presentation.Messages" />
         <activity android:name=".presentation.SplashScreen">
             <intent-filter>
