--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ dependencies {
 
     // HSQLDB
     implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'    //database driver.
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+
+
 }
