--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,20 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.0-M1'
 
     // HSQLDB
     implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'    //database driver.
-    testImplementation 'org.mockito:mockito-core:1.10.19'
 
+    testImplementation group: 'com.google.guava', name: 'guava', version: '25.1-jre'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.+'
+    androidTestImplementation(group: 'com.android.support.test.espresso', name: 'espresso-core', version: '3.0.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestImplementation 'com.android.support:support-annotations:23.3.0'
+    androidTestImplementation('com.android.support.test:rules:1.0.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
 
-
+    }
 }
